--- a/.travis.yml
+++ b/.travis.yml
@@ -4,26 +4,25 @@
 language: python
 
 env:
-#  - TOXENV=py34
-#  - TOXENV=py33
   - TOXENV=py27
 
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox
+install:
+  - travis_retry pip install tox==2.1.1
 
 # command to run tests, e.g. python setup.py test
-script: tox
+# script: tox
 
 # After you create the Github repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
-deploy:
-  provider: pypi
-  distributions: sdist bdist_wheel
-  user: yhaddad
-  password:
-    secure: PLEASE_REPLACE_ME
-  on:
-    tags: true
-    repo: yhaddad/heppi
-    condition: $TOXENV == py27
+#deploy:
+#  provider: pypi
+#  distributions: sdist bdist_wheel
+#  user: yhaddad
+#  password:
+#    secure: PLEASE_REPLACE_ME
+#  on:
+#    tags: true
+#    repo: yhaddad/heppi
+#    condition: $TOXENV == py27
