--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - travis_retry pip install tox==2.1.1
-
+  - python setup.py install
 # command to run tests, e.g. python setup.py test
 # script: tox
 
