--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: python
 env:
   - TOXENV=py27
 
-
+sudo: required
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - travis_retry pip install tox==2.1.1
