--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,11 @@
-# Config file for automatic testing at travis-ci.org
-# This file will be regenerated if you run travis_pypi_setup.py
-
 language: python
 
 env:
   - TOXENV=py27
 
 sudo: required
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - travis_retry pip install tox==2.1.1
   - python setup.py install
-# command to run tests, e.g. python setup.py test
 script:
-  - echo "... TODO ..."
-
-# After you create the Github repo and add it to Travis, run the
-# travis_pypi_setup.py script to finish PyPI deployment setup
-#deploy:
-#  provider: pypi
-#  distributions: sdist bdist_wheel
-#  user: yhaddad
-#  password:
-#    secure: PLEASE_REPLACE_ME
-#  on:
-#    tags: true
-#    repo: yhaddad/heppi
-#    condition: $TOXENV == py27
+  - echo "done building Heppi"
