--- a/.pypirc
+++ b/.pypirc
@@ -1,16 +1,14 @@
 [distutils]
-index-servers=pypitest
+index-servers =
+  pypi
+  pypitest
 
-#[pypi]
-#repository=https://pypi.python.org/pypi
-#username=yhaddad
-#password=<..>17Ay1985
-
-[pypitest]
-repository=https://testpypi.python.org/pypi
+[pypi]
+repository=https://pypi.python.org/pypi
 username=yhaddad
 password=<..>17Ay1985
 
-[server-login]
+[pypitest]
+repository=https://testpypi.python.org/pypi
 username=yhaddad
 password=<..>17Ay1985
